--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     background: rgb(127,127,213);
-    background: linear-gradient(0deg, rgba(127,127,213,1) 0%, rgba(134,168,231,1) 45%, rgba(145,234,228,1) 100%);
+    background: linear-gradient(0deg, rgba(127,127,213,1) 0%, rgba(134,168,231,1) 45%);
     font-family: sans-serif;
     height: 100vh;
 }
@@ -48,3 +48,4 @@ button:hover {
     background: rgb(200, 129, 207);
     border: solid 1px rgb(200, 129, 207);
 }
+
