--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+*{
+    box-sizing: border-box;
+}
 body {
+    margin: 0;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,3 +54,43 @@ button:hover {
     border: solid 1px rgb(200, 129, 207);
 }
 
+/* Footer */
+.footer { 
+  margin-top: 760px;
+  position: absolute; 
+}
+.footer p {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.footer p i {
+  color: rgb(145, 33, 198);
+}
+/* Gradient signature */
+/* .footer p span { 
+  background-image: linear-gradient(315deg, #8a4fbe 0%, #cb38e2 74%);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+} */
+
+/* Regular signature */
+.footer p {
+    color: rgb(255, 255, 255);
+}
+
+.footer p span a {
+  text-decoration: none;
+  color: rgb(221, 169, 255);
+  
+}
+.footer p span a:hover {
+    text-decoration: none;
+    color: rgb(129, 32, 164);
+}
+
+@media only screen and (max-width: 450px) {
+  .footer p {
+    margin: 0 1rem;
+    font-size: 1.2rem;
+  }
+}
